# Inco-Encrypted-KYC-on-Solana-devnet

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json
claimrail/: .gitignore  Anchor.toml  Arcium.toml  Cargo.toml  README.md  RTG_SUBMISSION_PACK.md  SUBMISSION_COPY.md
claimrail/app/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.ts
claimrail/app/src/app/: error.tsx  globals.css  layout.tsx  page.tsx
claimrail/app/src/components/: AccessPolicyPanel.tsx  ArciumFlow.tsx  BrandMark.tsx  DemoNarrative.tsx  EligibilityResult.tsx  Header.tsx  InfoPanel.tsx  IssuerConsole.tsx  IssuerContextBar.tsx  KYCForm.tsx  OnboardingProgress.tsx  PolicyRuleEngine.tsx  Results.tsx  VerifierConsole.tsx
claimrail/app/src/contexts/: WalletProvider.tsx
claimrail/app/src/hooks/: useConfidentialKyc.ts
claimrail/app/src/lib/: claimrailView.ts  eligibilityEngine.ts
claimrail/encrypted-ixs/: Cargo.toml
claimrail/encrypted-ixs/src/: compute_eligibility.rs  lib.rs
claimrail/programs/claimrail/: Cargo.toml
claimrail/programs/claimrail/src/: lib.rs
claimrail/scripts/: e2e-arcium-test.mjs  init-computation-defs.ts  init-default-policy.mjs  smoke-arcium-test.mjs
claimrail/tests/: claimrail.ts
frontend/: .env.local  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Header.tsx  InfoPanel.tsx  KYCForm.tsx  Results.tsx
frontend/src/contexts/: WalletProvider.tsx
frontend/src/hooks/: useConfidentialKyc.ts
frontend/src/idl/: confidential_kyc.json  confidential_kyc.ts
programs/confidential-kyc/: Cargo.toml
programs/confidential-kyc/src/: lib.rs
scripts/: sync-idl.js
