[package]
name = "confidential-kyc"
version = "0.1.0"
description = "Encrypted KYC program using Inco Lightning on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "confidential_kyc"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
inco-lightning = { version = "0.1", features = ["cpi"] }
